--- a/example/app/src/main/AndroidManifest.xml
+++ b/example/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PagpayExample">
+        android:theme="@style/Theme.PagpayExample"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true">
