--- a/example/app/build.gradle
+++ b/example/app/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-    implementation files('libs/pagpay-1.0.1.aar')
+    implementation 'br.com.uol.pagseguro:pagpay:1.0.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
